# tap-avro

./: README.md  environment.yml  meltano.yml  pyproject.toml
.meltano/: analytics.json  meltano.db
.meltano/run/: bin
.meltano/run/tap-avro/: state.json  tap.properties.json
tap_avro/: __init__.py  __main__.py  client.py  streams.py  tap.py  util.py
tap_avro/tests/: create_avro_data.py  test_core.py
tap_avro/tests/data/: avro_files_definitions.json
tap_avro/tests/data/sub/: alphabetsub.avro
tests/: __init__.py  test_core.py
